--- a/client/main.html
+++ b/client/main.html
@@ -1,8 +1,9 @@
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="MKG Law Professional Corp.">
+  <meta name="description" content="MKG Law Professional Corp. offers quality, cost effective and professional legal law services in Toronto and the GTA.">
   <meta name="author" content="Manpreet Kaur Ghuman">
+  <meta name="keywords" content="lawyer,GTA,Toronto,Mississauga,Brampton,Etobicoke,Real estate,Sale,Residential sale,residential,Transaction,Commercial sale,Commercial,Property sale,Property,Canada,Legal services,Legal advise,Injury,Personal injury,Car accident,Home,Buying,Selling,Purchase,Refinance,Mortgage,Greater Toronto area,Law firm,Law firm in Mississauga,Law firm in Brampton,Law firm in Toronto,Manpreet Kaur,Kaur,Manpreet,Down payment,Deposit,Business sale,Unit sale,Low prices,Reasonable legal prices,Real estate lawyer,Personal injury lawyer,Title insurance,Insurance,Real estate pricing,Transaction process,Legal solutions,Solutions,Closings,Closing,Deals,Closing deal,Closing date,Discharge mortgage,Discharge,Condominium,Condo,Sale of condominium,Sale of condo,Speaks Punjabi,Speaks hindi,Speaks urdu,Hindi,Punjabi,Urdu">
   <title>MKG Law Professional Corp.</title>
   <!--Company Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,700" rel="stylesheet">
