--- a/client/main.html
+++ b/client/main.html
@@ -7,6 +7,8 @@
   <title>MKG Law Professional Corp.</title>
   <!--Company Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,700" rel="stylesheet">
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 <body id="page-top"></body>
 <template name="main">
